@@ -1,3 +1,8 @@
+--Beta 1.2--	22/09/2020
+New Features:
+* chance to start alive added in
+* tracks number of alive cells and can now return perc alive
+
 --Beta 1.0.1--	21/09/2020
 Changes:
 - .net standard conversion of project to dll file
